# amqp2elastic

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
