[package]
name = "amqp2elastic"
version = "0.1.1"
authors = ["Maarten <maartendeschrijver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
amiquip = "0.3"
xmltree = "0.10"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.3.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
